# Neural_Topic_Models

./: .gitignore  BATM_run.py  Demo.ipynb  ETM_run.py  GMNTM_run.py  GSM_run.py  LDA_run.py  MIXVAE_run.py  NTM_run.py  README.md  Topic Model 可视化.ipynb  Untitled.ipynb  VADE_run.py  WAE_run.py  WLDA_run.py  WTM_run.py  calc_tc_td.py  ccpNTM_run.py  computing.py  cpNTM_run.py  data.py  dataLoader.py  data_utils.py  dataset.py  device_helper.py  example.py  finch.py  gmmNTM_run.py  gmmvae.py  inference.py  main.py  mixvae.py  ntm_usage.md  pyproject.toml  requirements.txt  run_all.py  setup.cfg  setup.py  skipgram.py  tmp_run.py  (+10 more)
assets/: Demo.ipynb
ckpt/: LDA_K20_cnews10k_bow.model  LDA_K20_cnews10k_bow.model.expElogbeta.npy  LDA_K20_cnews10k_bow.model.id2word  LDA_K20_cnews10k_bow.model.state
data/: 1bowordmcp_lines.txt  3body1_lines.txt  3body2_lines.txt  3body3_lines.txt  EMNLP2020_lines.txt  cls0_lines.txt  cnews10k_lines.txt  harrypotter4_lines.txt  poems_lines.txt
data/1bocharm/: corpus.mm  corpus.mm.index  dict.txt
data/1bowordm/: 1bowordm_bows.pkl  1bowordm_vocab.pkl  corpus.mm.index  dict.txt
data/1bowordmcp/: corpus.mm  corpus.mm.index  dict.txt
data/3body2/: corpus.mm  corpus.mm.index  dict.txt  docs.pkl
data/cnews10k/: corpus.mm  corpus.mm.index  dict.txt  docs.pkl  tfidf.mm  tfidf.mm.index
data/harrypotter4/: corpus.mm  corpus.mm.index  dict.txt  docs.pkl
data/zhdd/: corpus.mm  corpus.mm.index  dict.txt  zhdd_bows.pkl  zhdd_vocab.pkl
data/zhddline/: corpus.mm  corpus.mm.index  dict.txt  zhddline_bows.pkl  zhddline_vocab.pkl
docs/: API_reference.md
logs/: VAE_K10_sub_BCE.log.bak  VAE_K20_sub_BCE.log.bak  VAE_K30_sub_BCE.log.bak  VAE_K40_sub_BCE.log.bak
models/: BATM.py  ETM.py  GMNTM.py  GSM.py  WLDA.py  WTM.py  __init__.py  base_ntm.py  gan.py  vade.py  vae.py  wae.py
ntm/: __init__.py  config.py  errors.py  facade.py  registry.py  types.py  validation.py
ntm/adapters/: checkpoint_adapter.py  dataset_adapter.py  model_adapter.py
tests/: test_checkpoint_adapter.py  test_integration_load_model.py  test_ntm_package.py  test_validation.py
