# Keep [metadata] / [options] in sync with pyproject.toml [project] (same name, version, deps).
[metadata]
name = neural-topic-models
version = 0.1.0
description = PyTorch neural topic models (GSM, WTM, ETM, GMNTM, BATM) with an importable ntm API.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = ZhangLeilan
url = https://github.com/zll17/Neural_Topic_Models
project_urls =
    Homepage = https://github.com/zll17/Neural_Topic_Models
    Repository = https://github.com/zll17/Neural_Topic_Models
    Documentation = https://github.com/zll17/Neural_Topic_Models/blob/master/ntm_usage.md
keywords =
    topic-model
    neural-topic-model
    pytorch
    gensim
    ntm
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.6.0
    gensim>=4.2.0
    tqdm>=4.64.0
    numpy>=1.19.5
    matplotlib>=3.3.4
    scikit-learn>=0.24.2
    jieba>=0.42.1
zip_safe = False

[options.packages.find]
where = .
include = ntm*

[options.extras_require]
hanlp = pyhanlp
full = pyhanlp
dev =
    pytest>=6.0
release =
    build>=1.0.0
    twine>=4.0

[options.package_data]
ntm = py.typed
